[tool.poetry]
name = "licenses"
version = "0.2.1-dev0"
description = "Small website to provide and overview and API for software licenses."
authors = ["Nachtalb <na@nachtalb.io>"]
license = "LGPL-3.0"
readme = "README.md"
repository = "https://github.com/Nachtalb/licenses_api"
maintainers = ["Nachtalb"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
fastapi = {extras = ["all"], version = "^0.95.0"}
ruamel-yaml = "^0.17.21"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = {extras = ["black"], version = "^8.11.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
serve = "uvicorn licenses.main:app"

[tool.black]
line-length = 120
target-version = ['py311']
preview = true
